--- a/flutter/windows/runner/Runner.rc
+++ b/flutter/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.carriez" "\0"
-            VALUE "FileDescription", "rustdesk" "\0"
+            VALUE "FileDescription", "SuporteAdaptive" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "rustdesk" "\0"
+            VALUE "InternalName", "SuporteAdaptive" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.carriez. All rights reserved." "\0"
-            VALUE "OriginalFilename", "rustdesk.exe" "\0"
-            VALUE "ProductName", "rustdesk" "\0"
+            VALUE "OriginalFilename", "SuporteAdaptive.exe" "\0"
+            VALUE "ProductName", "SuporteAdaptive" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
