--- a/res/rustdesk.desktop
+++ b/res/rustdesk.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=RustDesk
+Name=SuporteAdaptive
 GenericName=Remote Desktop
 Comment=Remote Desktop
 Exec=rustdesk %u
@@ -15,4 +15,4 @@ X-Desktop-File-Install-Version=0.23
 
 [Desktop Action new-window]
 Name=Open a New Window
-Exec=rustdesk %u
+Exec=SuporteAdaptive %u
