--- a/res/rustdesk.service
+++ b/res/rustdesk.service
@@ -1,12 +1,12 @@
 [Unit]
-Description=RustDesk
+Description=SuporteAdaptive
 Requires=network.target
 After=systemd-user-sessions.service
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/rustdesk --service
-PIDFile=/run/rustdesk.pid
+ExecStart=/usr/bin/SuporteAdaptive --service
+PIDFile=/run/SuporteAdaptive.pid
 KillMode=mixed
 TimeoutStopSec=30
 User=root
