--- a/res/PKGBUILD
+++ b/res/PKGBUILD
@@ -1,4 +1,4 @@
-pkgname=rustdesk
+pkgname=suporteadaptive
 pkgver=1.2.2
 pkgrel=0
 epoch=
@@ -23,13 +23,13 @@ md5sums=() #generate with 'makepkg -g'
 
 package() {
   if [[ ${FLUTTER} ]]; then
-	  mkdir -p "${pkgdir}/usr/lib/rustdesk" && cp -r ${HBB}/flutter/build/linux/x64/release/bundle/* -t "${pkgdir}/usr/lib/rustdesk"
+	  mkdir -p "${pkgdir}/usr/lib/suporteadaptive" && cp -r ${HBB}/flutter/build/linux/x64/release/bundle/* -t "${pkgdir}/usr/lib/suporteadaptive"
   fi
   mkdir -p "${pkgdir}/usr/bin"
-  pushd ${pkgdir} && ln -s /usr/lib/rustdesk/rustdesk usr/bin/rustdesk && popd
-  install -Dm 644 $HBB/res/rustdesk.service -t "${pkgdir}/usr/share/rustdesk/files"
-  install -Dm 644 $HBB/res/rustdesk.desktop -t "${pkgdir}/usr/share/rustdesk/files"
-  install -Dm 644 $HBB/res/rustdesk-link.desktop -t "${pkgdir}/usr/share/rustdesk/files"
-  install -Dm 644 $HBB/res/128x128@2x.png "${pkgdir}/usr/share/icons/hicolor/256x256/apps/rustdesk.png"
-  install -Dm 644 $HBB/res/scalable.svg "${pkgdir}/usr/share/icons/hicolor/scalable/apps/rustdesk.svg"
+  pushd ${pkgdir} && ln -s /usr/lib/suporteadaptive/SuporteAdaptive usr/bin/SuporteAdaptive && popd
+  install -Dm 644 $HBB/res/rustdesk.service -t "${pkgdir}/usr/share/suporteadaptive/files"
+  install -Dm 644 $HBB/res/rustdesk.desktop -t "${pkgdir}/usr/share/suporteadaptive/files"
+  install -Dm 644 $HBB/res/rustdesk-link.desktop -t "${pkgdir}/usr/share/suporteadaptive/files"
+  install -Dm 644 $HBB/res/128x128@2x.png "${pkgdir}/usr/share/icons/hicolor/256x256/apps/suporteadaptive.png"
+  install -Dm 644 $HBB/res/scalable.svg "${pkgdir}/usr/share/icons/hicolor/scalable/apps/suporteadaptive.svg"
 }
