Ajustes build/pakcages linux

--- a/res/rustdesk-link.desktop
+++ b/res/rustdesk-link.desktop
@@ -4,7 +4,7 @@ NoDisplay=true
 MimeType=x-scheme-handler/suportaedaptive;
 TryExec=SuporteAdaptive
 Exec=SuporteAdaptive %u
-Icon=SuporteAdaptive
+Icon=suporteadaptive
 Terminal=false
 Type=Application
 StartupNotify=false
