--- a/res/rustdesk.desktop
+++ b/res/rustdesk.desktop
@@ -3,7 +3,7 @@ Name=SuporteAdaptive
 GenericName=Remote Desktop
 Comment=Remote Desktop
 Exec=SuporteAdaptive %u
-Icon=SuporteAdaptive
+Icon=suporteadaptive
 Terminal=false
 Type=Application
 StartupNotify=true
